--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800&family=Lobster&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="{% static./css/base.css%}">
-    <link rel="stylesheet" href="{% static./css/header.css%}">
-    <link rel="stylesheet" href="./css/section.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="static./css/base.css">
+    <link rel="stylesheet" href="static./css/header.css">
+    <link rel="stylesheet" href="static./css/section.css">
+    <link rel="stylesheet" href="static./css/footer.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <title>
         {% block title %}
-        {% end block %}
+        {% endblock %}
     </title>
 
 </head>
@@ -48,7 +48,7 @@
     </header>
     <main>
         {% block content %}
-        {% end block %}
+        {% endblock %}
     </main>
     <footer>
         <a href="">
