--- a/templates/portfolio/about_me.html
+++ b/templates/portfolio/about_me.html
@@ -1,5 +1,30 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     About Me
 {% endblock title %}
+
+{% block content %}
+
+<section class="about-section center">
+
+        <div class="about-image-container center">
+            <img src="{% static '/img/avatar-img.jpg'%}" alt="my picture">
+            <a href="assets/resume.pdf" download><button> Get the Full resume</button></a>
+        </div>
+
+        <div class="about-description-container center-column">
+
+            <div class="center-column">
+                <h1>My role as a dev</h1>
+                <h2>Victor Von Scratch</h2>
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem accusantium suscipit officiis voluptate, doloremque perspiciatis commodi labore dolores asperiores officia corporis voluptatum dignissimos? Iusto laborum repudiandae odio eveniet dolorum saepe? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate maxime fuga necessitatibus labore voluptatibus provident iste nam, sit, eveniet exercitationem natus consectetur excepturi voluptatum sapiente perspiciatis minima, odit ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim et facilis atque dolorem dolorum ullam quasi incidunt molestiae labore expedita odit dicta dolore culpa dolor quisquam maxime, nihil a vero?
+            </p>
+
+        </div>
+    </section>
+{% endblock content %}
