--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800&family=Lobster&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="{%static '/css/base.css'%}">
-    <link rel="stylesheet" href="{%static '/css/header.css'%}">
-    <link rel="stylesheet" href="{%static '/css/section.css'%}">
-    <link rel="stylesheet" href="{%static '/css/footer.css'%}">
-    <link rel="stylesheet" href="{%static '/css/responsive.css'%}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    <link rel="stylesheet" href="{% static 'css/header.css' %}">
+    <link rel="stylesheet" href="{% static 'css/section.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>
         {% block title %}
         {% endblock %}
@@ -39,7 +39,7 @@
             <!--Links or Options of the Menu-->
             <div class="nav-link center">
                 <a href="{% url 'about_me' %}">About me</a>
-                <a href="">Projects</a>
+                <a href="{% url 'projects' %}">Projects</a>
                 <a href="{% url 'experience' %}">Experience</a>
                 <a href="{% url 'contact' %}">Contact</a>
             </div>
@@ -53,12 +53,12 @@
     </main>
     <footer>
         <a href="">
-            <h2>my name</h2>
+            <h2>Britney Philpot</h2>
         </a>
 
         <nav class="nav-footer center">
             <a href="{% url 'about_me' %}">About Me</a>
-            <a href="">Projects</a>
+            <a href="{% url 'projects' %}">Projects</a>
             <a href="{% url 'experience' %}">Experience</a>
             <a href="{% url 'contact' %}">Contact</a>
         </nav>
