--- a/templates/portfolio/about_me.html
+++ b/templates/portfolio/about_me.html
@@ -18,7 +18,7 @@
 
             <div class="center-column">
                 <h1>My role as a dev</h1>
-                <h2>Victor Von Scratch</h2>
+                <h2>Full Stack</h2>
             </div>
 
             <p>
