--- a/templates/portfolio/contact.html
+++ b/templates/portfolio/contact.html
@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Contact
 {% endblock title %}
+
+
+
+{% block content %}
+
+<section class="about-section center">
+
+        <div class="about-image-container center">
+            <img src="{% static '/img/picture-2.jpg'%}" alt="my picture">
+            
+        </div>
+
+        <div class="about-description-container center-column">
+
+            <div class="center-column">
+                <h1>Contact Me</h1>
+                <h2>I am here to answer any questions you may have!</h2>
+            </div>
+
+        </div>
+    </section>
+{% endblock content %}
