--- a/templates/portfolio/experience.html
+++ b/templates/portfolio/experience.html
@@ -1,5 +1,29 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Experience
 {% endblock title %}
+
+
+{% block content %}
+
+<section class="about-section center">
+
+        <div class="about-image-container center">
+            <img src="{% static '/img/picture-3.jpg'%}" alt="my picture">
+            
+        </div>
+
+        <div class="about-description-container center-column">
+
+            <div class="center-column">
+                <h1>My Skills and Experience</h1>
+                
+            </div>
+
+            
+
+        </div>
+    </section>
+{% endblock content %}
