--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,12 +1,12 @@
 /*Variables*/
 :root {
-    --primary-color: #334EEF;
+    --primary-color: #1637f1;
  
     --secondary-color: #6772D7;
   
     --neutral-color: #333333;
 
-    --background-color: #F5F8FF;
+    --background-color: #a0b9f3;
 
     --surface-color: #435DEF;
 
