--- a/templates/portfolio/experience.html
+++ b/templates/portfolio/experience.html
@@ -11,14 +11,25 @@
 <section class="about-section center">
 
         <div class="about-image-container center">
-            <img src="{% static '/img/picture-3.jpg'%}" alt="my picture">
+            <img src="{% static '/img/towerpc.jpg'%}" alt="my picture">
             
         </div>
 
         <div class="about-description-container center-column">
 
             <div class="center-column">
-                <h1>My Skills and Experience</h1>
+                <h2>My Experience</h2>
+                <h3>As a new Full Stack Developer I do not have alot of experience but I do have drive and determination to build a beautiful and well functioning webpage.</h3>
+                <h2>My Skills</h2>
+                <h3>Full Stack Development</h3>
+                <h3>HTML</h3>
+                <h3>CSS</h3>
+                <h3>JavaScript</h3>
+                <h3>Python</h3>
+                <h3>Django</h3>
+                <h3>React</h3>
+                <p>I am also in the process of learning more skills and languages with coding to add to my skillset for future projects and opportunities.</p>
+                
                 
             </div>
 
