--- a/templates/portfolio/about_me.html
+++ b/templates/portfolio/about_me.html
@@ -10,7 +10,7 @@
 <section class="about-section center">
 
         <div class="about-image-container center">
-            <img src="{% static '/img/avatar-img.jpg'%}" alt="my picture">
+            <img src="{% static '/img/profilepic.jpg'%}" alt="my picture">
             <a href="assets/resume.pdf" download><button> Get the Full resume</button></a>
         </div>
 
@@ -18,11 +18,11 @@
 
             <div class="center-column">
                 <h1>My role as a dev</h1>
-                <h2>Full Stack</h2>
+                <h2>Full Stack Development</h2>
             </div>
 
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem accusantium suscipit officiis voluptate, doloremque perspiciatis commodi labore dolores asperiores officia corporis voluptatum dignissimos? Iusto laborum repudiandae odio eveniet dolorum saepe? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate maxime fuga necessitatibus labore voluptatibus provident iste nam, sit, eveniet exercitationem natus consectetur excepturi voluptatum sapiente perspiciatis minima, odit ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim et facilis atque dolorem dolorum ullam quasi incidunt molestiae labore expedita odit dicta dolore culpa dolor quisquam maxime, nihil a vero?
+                Hello! My name is Britney Philpot, I have 36 years old and from a small town in Oklahoma. I started my journey with Full Stack Development in 2025 by attending San Diego Global Knowledge University. This was definitely a hidden passion that I have enjoyed learning more about. I love making websites look and feel like they were made to catch your eye and leave you in awe. This for me has been an incredible learning experience and I hope that, with the skills I've learned, I am more than able to build amazing webpages for clients. 
             </p>
 
         </div>
