--- a/templates/portfolio/contact.html
+++ b/templates/portfolio/contact.html
@@ -12,15 +12,17 @@
 <section class="about-section center">
 
         <div class="about-image-container center">
-            <img src="{% static '/img/picture-2.jpg'%}" alt="my picture">
+            <img src="{% static '/img/20231010_190421.jpg'%}" alt="my picture">
             
         </div>
 
         <div class="about-description-container center-column">
 
             <div class="center-column">
-                <h1>Contact Me</h1>
+                <h1>Contact Me!</h1>
                 <h2>I am here to answer any questions you may have!</h2>
+                <h3>Phone: (918)315-8084</h3>
+                <h3>Email: britphilpot43@outlook.com</h3>
             </div>
 
         </div>
