--- a/templates/portfolio/contact.html
+++ b/templates/portfolio/contact.html
@@ -9,22 +9,18 @@
 
 {% block content %}
 
-<section class="about-section center">
+<section class="contact-form">
+            <h1>Contact Me!</h1>
+                <form id="contact-form" method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div>
+                        <button type="submit">Submit</button>
+                        <button type="reset">Reset</button>
+                    </div>
 
-        <div class="about-image-container center">
-            <img src="{% static '/img/20231010_190421.jpg'%}" alt="my picture">
-            
-        </div>
+                </form>
+          
+</section>
 
-        <div class="about-description-container center-column">
-
-            <div class="center-column">
-                <h1>Contact Me!</h1>
-                <h2>I am here to answer any questions you may have!</h2>
-                <h3>Phone: (918)315-8084</h3>
-                <h3>Email: britphilpot43@outlook.com</h3>
-            </div>
-
-        </div>
-    </section>
 {% endblock content %}
